--- a/gb/24/11/1/n14362559.md
+++ b/gb/24/11/1/n14362559.md
@@ -19,37 +19,36 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357709.md#1">卓荣泰视察东兴净水厂 正面回应提高普及率等多项建议</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357889.md#1">卓荣泰：桃竹苗大硅谷计划当领头羊 水电供应采四方针</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361646.md#1">卓荣泰拍板明年研议修法 育婴留停津贴拟增为7个月</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362565.md#1">康芮台风致农损近千万 食用玉米农损最严重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362410.md#1">卓荣泰提总预算3大争议案解方 盼朝野以民为先</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362334.md#1">高雄山区累积降雨破500公釐 连外道路柔肠寸断</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362092.md#1">防疫有成 台湾正式列为非洲猪瘟非疫国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361685.md#1">台政院拍板 政府约聘雇月薪应高于最低工资1.1倍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361647.md#1">政院祭解低薪八大措施 立委：提升中小企业获利才是关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361637.md#1">康芮台风酿全台60万户停电</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546297.md#1">旗津污水厂台风夜破爆管淹水 水利局：进水量骤增超载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545961.md#1">台湾抢进太空市场 12颗立方卫星分批发射</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545946.md#1">台厂布局太空产品 进军美国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545925.md#1">因应台风丹娜丝 赖清德盼中央与地方合作</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544820.md#1">要等对美关税结果公布 4100亿特别条例暂不处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544808.md#1">在野要求吴钊燮下台  立院迳付二读交协商</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544789.md#1">萧美琴遭跟监 绿提案盼立院谴责中共遭封杀</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/26/n11004578.md#1" target="_blank">林辉：宁跳珠江也不批孔子的金石界大家</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781764.md#1">太后临终前 竟让皇帝不要把皇位传给儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355475.md#1">明日黄花蝶也愁！看苏轼怎样走出低谷 转化人生境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361041.md#1">【音乐】神韵乐团三、四、五、六团 音乐会选播｜首播：美东时间2024年11月2日 晚间8点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361755.md#1">【新闻大破解】美日大选前后 慎堵邪恶轴心闹事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356482.md#1">【晚间新闻】布林肯：中共是美国最大威胁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359949.md#1">抓拍梦幻般孔雀照 9岁童获世界级摄影大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360702.md#1">【更新】台风康芮袭台 31日全台停班课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359589.md#1">否认为歌曲版权起诉刀郎 云朵代言品牌遭下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360436.md#1">投资2亿 刘德华《焚城》点映首日票房仅34万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359656.md#1">遭向佐突搧巴掌 李小龙模仿者方小龙称已报警</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360347.md#1">45岁邓超头发胡子全白 侧脸神似周星驰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361071.md#1">夫妻双双入围青龙奖 汤唯晒与导演夫甜蜜合照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357571.md#1">夜尿超困扰！2动作可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360606.md#1">为什么人们爱看恐怖片吓自己？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361417.md#1">廉价航空公司的机票为何能卖那么便宜？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351750.md#1">你应该了解 不用电有哪些煮饭方式与技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360174.md#1">52年研究显示 吃鸡蛋可改善女性记忆力</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/1/n14362559.htm">台风假由中央宣布？卓荣泰：地方因地制宜行之多年</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362559.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
